--- a/Google HW/index.html
+++ b/Google HW/index.html
@@ -26,16 +26,18 @@
       </nav>
     </header>
     <main>
+      <div class="main">
+      <img src="GoogleLogo.png" alt="google" class="center" />
       <div class="hero">
-        <img src="GoogleLogo.png" alt="google" class="center" />
-        <input
+      <input
           class="searchbar"
           type="text"
           placeholder="What would you like to search?"
-        />
-        <div class="buttons">
-          <button>Google Search</button> <button>I'm Feeling Lucky</button>
-        </div>
+      />
+      </div>
+      <div class="buttons">
+      <button>Google Search</button> <button>I'm Feeling Lucky</button>
+      </div>
       </div>
       <div class="footer">
         <footer>
